grafana/envoy-bootstrap.yaml
node:
  cluster: grafana
  id: haydenrpi4

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

stats_sinks:
  - name: envoy.stat_sinks.statsd
    typed_config: 
      "@type": type.googleapis.com/envoy.config.metrics.v3.StatsdSink
      address: 
        socket_address: { address: 192.168.31.190, port_value: 9125 }
      prefix: envoy-grafana

static_resources:
# Ingress Config - ingressgateway - grafana
  listeners:
  - name: grafana-ingress-listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          use_remote_address: true
          skip_xff_append: false
          generate_request_id: false
            # tracing:
            #   provider:
            #     name: envoy.tracers.zipkin
            #     typed_config:
            #       "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
            #       collector_cluster: jaeger
            #       collector_endpoint: "/api/v2/spans"
            #       shared_span_context: false
            #       collector_endpoint_version: HTTP_JSON
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: grafana }
# Egress Config - grafana - prometheus
  - name: grafana-egress-listener
    address:
      socket_address: { address: 127.0.0.1, port_value: 9090 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          use_remote_address: true
          skip_xff_append: false
          generate_request_id: false
            # tracing:
            #   provider:
            #     name: envoy.tracers.zipkin
            #     typed_config:
            #       "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
            #       collector_cluster: jaeger
            #       collector_endpoint: "/api/v2/spans"
            #       shared_span_context: false
            #       collector_endpoint_version: HTTP_JSON
          codec_type: auto
          stat_prefix: egress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: prometheus }
                  
  clusters:
  - name: grafana
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: grafana
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: grafana-sidecar
                port_value: 3000

  - name: prometheus
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: prometheus
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: prometheus-sidecar
                port_value: 80

                  # - name: jaeger
                  #   connect_timeout: 0.25s
                  #   type: STRICT_DNS
                  #   lb_policy: ROUND_ROBIN
                  #   dns_lookup_family: V4_ONLY
                  #   load_assignment:
                  #     cluster_name: jaeger
                  #     endpoints:
                  #     - lb_endpoints:
                  #       - endpoint:
                  #           address:
                  #             socket_address:
                  #               address: jaeger
                  #               port_value: 80
